Updated daily notes

--- a/docs/daily/5-16-25_ToDo.md
+++ b/docs/daily/5-16-25_ToDo.md
@@ -1,4 +1,4 @@
 #5/16/25 To Do list
-[ ] 1. figure out what is wrong with odd bank account amounts 
-[ ] 2. call medishare and see about reducing rates
+[x] figure out what is wrong with odd bank account amounts 
+[ ] call medishare and see about reducing rates
 [ ] 3. Renew ForeFlight subscription 
